Name: sortie
Version: 0.1
License: AllRightsReserved
Cabal-Version: >= 1.10
Build-Type: Simple

Executable sortie
  Main-Is: Main.hs
  Default-Language: Haskell2010
  Build-Depends: base,
                 Cabal >= 1.10,
                 containers,
                 directory,
                 filepath,
                 lens,
                 monad-loops,
                 old-locale,
                 pretty,
                 process,
                 regex-base,
                 regex-pcre,
                 split,
                 time
  GHC-Options: -Wall -Werror -O2
  if !os(darwin)
     LD-Options: -static