Name: sortie
Version: 0.1
License: AllRightsReserved
Cabal-Version: >= 1.10
Build-Type: Simple

Executable sortie
  Main-Is: Main.hs
  Default-Language: Haskell2010
  Build-Depends: base,
                 bytestring,
                 Cabal >= 1.10,
                 containers,
                 directory,
                 filepath,
                 hS3,
                 lens,
                 monad-loops,
                 pretty,
                 process,
                 regex-base,
                 regex-pcre,
                 split,
                 unix
  GHC-Options: -Wall -Werror -O2
  if !os(darwin)
     LD-Options: -static